Premium kullanıcılar için yeni analiz özellikleri eklendi. Yerelleştirme dosyalarına yeni içerikler eklendi ve mevcut içerikler güncellendi. Kullanıcı arayüzünde, premium özelliklerin kilitli gösterimi için yeni bileşenler tanımlandı. Ayrıca, toplam uyku süresi grafiği ve diğer analiz bileşenleri için kullanıcı deneyimi iyileştirildi.

--- a/polysleep/Resources/Localizations/Analytics.xcstrings
+++ b/polysleep/Resources/Localizations/Analytics.xcstrings
@@ -1779,6 +1779,176 @@
           }
         }
       }
+    },
+    "analytics.premium.required" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Premium Required"
+          }
+        },
+        "tr" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Premium Gerekli"
+          }
+        }
+      }
+    },
+    "analytics.premium.qualityDescription" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Detailed sleep quality analysis with distribution charts"
+          }
+        },
+        "tr" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Dağılım grafikleri ile detaylı uyku kalitesi analizi"
+          }
+        }
+      }
+    },
+    "analytics.premium.breakdownDescription" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Sleep component breakdown with interactive pie charts"
+          }
+        },
+        "tr" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Etkileşimli pasta grafikleri ile uyku bileşeni dağılımı"
+          }
+        }
+      }
+    },
+    "analytics.premium.consistencyDescription" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Sleep consistency analysis and routine optimization"
+          }
+        },
+        "tr" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Uyku tutarlılığı analizi ve rutin optimizasyonu"
+          }
+        }
+      }
+    },
+    "analytics.premium.timeGainedDescription" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Track time gained from polyphasic sleep with activity suggestions"
+          }
+        },
+        "tr" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Aktivite önerileri ile polifazik uykudan kazanılan zamanı takip edin"
+          }
+        }
+      }
+    },
+    "analytics.premium.upgrade" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Upgrade to Premium"
+          }
+        },
+        "tr" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Premium'a Yükseltin"
+          }
+        }
+      }
+    },
+    "analytics.premium.alert.title" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Premium Feature"
+          }
+        },
+        "tr" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Premium Özellik"
+          }
+        }
+      }
+    },
+    "analytics.premium.alert.upgrade" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Upgrade Now"
+          }
+        },
+        "tr" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Şimdi Yükseltin"
+          }
+        }
+      }
+    },
+    "analytics.premium.alert.message" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "This feature is available with Premium subscription. Upgrade to unlock detailed analytics and insights."
+          }
+        },
+        "tr" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Bu özellik Premium abonelik ile kullanılabilir. Detaylı analitik ve içgörüleri açmak için yükseltin."
+          }
+        }
+      }
+    },
+    "analytics.premium.alert.cancel" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Cancel"
+          }
+        },
+        "tr" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "İptal"
+          }
+        }
+      }
     }
   },
   "version" : "1.0"
