Uyku kalitesi değerlendirme ekranında yerelleştirme güncellemeleri yapıldı. Kullanıcıdan uyku kalitesini değerlendirmesi için yeni bir format eklendi. Ayrıca, tarih formatlama işlevi tanımlandı ve kullanıcı arayüzünde iyileştirmeler gerçekleştirildi.

--- a/polynap/Resources/Localizations/MainScreen.xcstrings
+++ b/polynap/Resources/Localizations/MainScreen.xcstrings
@@ -1079,13 +1079,13 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "How was your sleep quality?"
+            "value" : "Rate your sleep from %@ - %@"
           }
         },
         "tr" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Uyku kaliteniz nasıldı?"
+            "value" : "%@ - %@ saatleri arasındaki uykunuzu değerlendirin"
           }
         }
       }
