Alarm yönetimi ve bildirim sisteminde önemli güncellemeler yapıldı. AlarmManager ve AlarmService sınıfları üzerinden alarm tetikleme ve durdurma işlemleri optimize edildi. Kullanıcı arayüzünde alarm ayarları ve test fonksiyonları için yeni bileşenler eklendi. Ayrıca, bildirim izinleri ve ses dosyaları ile ilgili iyileştirmeler gerçekleştirildi. Yerelleştirme dosyalarında güncellemeler yapıldı ve yeni alarm sesleri eklendi.

--- a/polynap/Resources/Localizations/MainScreen.xcstrings
+++ b/polynap/Resources/Localizations/MainScreen.xcstrings
@@ -1703,6 +1703,40 @@
         }
       }
     },
+    "sleepBlock.validation.minimumDuration" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Sleep block must be at least 5 minutes"
+          }
+        },
+        "tr" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Uyku bloğu en az 5 dakika olmalıdır"
+          }
+        }
+      }
+    },
+    "sleepBlock.validation.timeConflict" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "This time conflicts with an existing sleep block"
+          }
+        },
+        "tr" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Bu saat mevcut bir uyku bloğu ile çakışıyor"
+          }
+        }
+      }
+    },
     "sleepBlock.error.title" : {
       "extractionState" : "manual",
       "localizations" : {
